fix router not found path err

--- a/client/index.html
+++ b/client/index.html
@@ -4,7 +4,7 @@
         <meta charset="UTF-8" />
         <link rel="shortcut icon" href="favicon.ico" type="image/x-icon" />
         <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-        <title>InShare - File Sharing Made Easy</title>
+        <title>Skynet | Home</title>
         <link rel="stylesheet" href="style.css" />
     </head>
 
@@ -98,7 +98,7 @@
         <div class="toast">Sample message</div>
         <!-- github fork button -->
         <a
-            href="https://github.com/ShivamJoker/inshare"
+            href="https://github.com/masterchief01/skynet"
             class="github-corner"
             aria-label="View source on GitHub"
         >
